--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension List::MergeSorted::XS
 
+1.01  Mon Dec 13 21:29:18 PST 2010
+    - add support for deduplication of elements
+    - rename things and rejigger internals
 1.00  Wed Dec  8 13:50:07 PST 2010
 	- initial version
