--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension List::MergeSorted::XS
 
+1.02  Tue Dec 14 11:25:46 PST 2010
+    - fix mis-merged code in _merge
+    - speed up auto codepath by counting elements in XS and not using division
 1.01  Mon Dec 13 21:29:18 PST 2010
     - add support for deduplication of elements
     - rename things and rejigger internals
